Remove duplicate definition of "smbfs_node_pool". Fix based on a patch provided by Juan RP in PR kern/39494.